<resources>
    <string name="app_name">MyQuizApp</string>
    <string name="quiz_app">Quiz App !</string>
    <string name="welcome">welcome</string>
    <string name="please_enter_your_name">please enter your name</string>
    <string name="e_g_john">e.g. John</string>
    <string name="start">start</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="submit">SUBMIT</string>
    <string name="result">Result</string>
    <string name="image">image</string>
    <string name="hey_congratulations">Hey, Congratulations!</string>
    <string name="finish">FINISH</string>
</resources>